--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "type": "git",
     "url": "git+https://github.com/davicedraz/notifications-service-worker.git"
   },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "web-push": "^3.5.0"
+  },
   "devDependencies": {
     "@types/node": "^18.14.0",
+    "@types/web-push": "^3.3.2",
     "@vitest/coverage-istanbul": "^0.25.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "vitest": "^0.25.7"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.3"
   }
 }
