chore: create docker-compose and rabbitmq service

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-﻿PUBLIC_WEB_PUSH_KEY=
+﻿#RabbitMQ
+RABBIT_MQ_URI=
+RABBIT_MQ_QUEUE=
+
+#Web push server keys
+PUBLIC_WEB_PUSH_KEY=
 PRIVATE_WEB_PUSH_KEY=
