build: dockerize project

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 ﻿#RabbitMQ
-RABBIT_MQ_URI=
-RABBIT_MQ_QUEUE=
+RABBITMQ_URI=amqp://guest:guest@localhost:5672
+RABBITMQ_QUEUE=notifications
 
 #Web push server keys
 PUBLIC_WEB_PUSH_KEY=
 PRIVATE_WEB_PUSH_KEY=
+
+#Required for docker
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
