doc: update readme

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ RABBITMQ_URI=amqp://guest:guest@localhost:5672
 RABBITMQ_QUEUE=notifications
 
 #Web push server keys
+# generate your own by uncomment the line WebPush.generateVAPIDKeys(); in VAPIDWebPush Class
 PUBLIC_WEB_PUSH_KEY=
 PRIVATE_WEB_PUSH_KEY=
 
